# relay-python-controller

./: .env.example  README.md  app.py  app2.py  main.py  pyproject.toml
control/: control.ino
garden/: garden.ino
templates/: index.html
tests/: test_smoke.py
